KSENROLL-12898 - UI: Delete Cluster Screen Term Label Alignment - Fixed the colon issue and the spacing issue
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@69686 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
@@ -2067,6 +2067,12 @@ thead > tr > th,
     padding: 0;
 }
 
+
+#ClusterDeleteConfirmationPage .uif-pageHeader{
+  min-height: initial;
+}
+
+
 /*Removing Shadow on disclosure section.*/
 section.uif-disclosure {
     box-shadow: none;
